# ignore-flake8-error

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  ignore_flake8_error.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
tests/: ignore_flake8_error_test.py
