[metadata]
name = ignore_flake8_error
version = 0.2.1
description = add `noqa` comments to ignore every occurrence of a flake8 error
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samueljsb/ignore-flake8-error
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = ignore_flake8_error
install_requires =
    flake8>=4
    tokenize-rt
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ignore-flake8-error = ignore_flake8_error:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
extend-select = B9

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
